--- a/index.html
+++ b/index.html
@@ -179,5 +179,26 @@
             .catch(err => console.log("Erro SW", err));
         }
     </script>
+    <div id="modal-novo" class="fixed inset-0 bg-black/95 backdrop-blur-sm hidden p-6 flex items-center justify-center z-50">
+    <div class="card-dark w-full max-w-sm rounded-3xl p-6 border border-zinc-800">
+        <h2 class="text-xl font-bold gold-text mb-4 uppercase tracking-tight">Novo Agendamento</h2>
+        
+        <div class="space-y-4">
+            <input type="text" id="novo-nome" placeholder="Nome do Cliente" class="w-full bg-zinc-950 border border-zinc-800 p-3 rounded-xl focus:gold-border outline-none text-sm">
+            <input type="tel" id="novo-tel" placeholder="WhatsApp" class="w-full bg-zinc-950 border border-zinc-800 p-3 rounded-xl focus:gold-border outline-none text-sm">
+            <div class="flex gap-2">
+                <input type="time" id="novo-hora" class="flex-1 bg-zinc-950 border border-zinc-800 p-3 rounded-xl focus:gold-border outline-none text-sm">
+                <input type="date" id="novo-data" class="flex-1 bg-zinc-950 border border-zinc-800 p-3 rounded-xl focus:gold-border outline-none text-sm text-zinc-500">
+            </div>
+            <input type="text" id="novo-servico" placeholder="Serviço (Ex: Barba e Cabelo)" class="w-full bg-zinc-950 border border-zinc-800 p-3 rounded-xl focus:gold-border outline-none text-sm">
+        </div>
+
+        <div class="flex gap-2 mt-6">
+            <button onclick="fecharNovo()" class="flex-1 border border-zinc-800 py-3 rounded-xl text-xs font-bold uppercase text-zinc-500">Cancelar</button>
+            <button onclick="salvarAgendamento()" class="flex-1 gold-bg text-black font-bold py-3 rounded-xl text-xs uppercase shadow-lg shadow-yellow-600/10">Confirmar</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
